deploying backend to Railway

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>My Spotify Profile</title>
-        <script src="src/main.jsx" type="module"></script>
+        <title>Persona.fm</title>
 
+        <script src="src/main.jsx" type="module"></script>
     </head>
     <body>
         <div id="root"></div>
